<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.weather.app.core.utils.FunctionHelper"/>
        <variable name="data" type="com.weather.app.restful.models.WeatherNow" />


    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iconSearch"
                android:layout_width="40dp"
                android:layout_gravity="end"
                android:layout_height="40dp"
               android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/ic_location_on" />

                <TextView
                    android:id="@+id/locationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_neu_bold"
                    android:gravity="center"
                    android:text="@{data.name}"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="23sp"
                    tools:text="Today Weather" />
            </LinearLayout>

            <TextView
                android:id="@+id/dateTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/helvetica_neue_medium"
                android:text="@{FunctionHelper.INSTANCE.timeNow}"
                android:textAlignment="center"
                tools:text="Sun 08 March 2019" />

            <LinearLayout
                android:id="@+id/weatherCardLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:padding="25dp"
                android:background="@drawable/weather_card_background"
                android:elevation="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/temperatureText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="60sp"
                        app:convertTemp="@{data.main.temp}"
                        tools:text="20º" />

                    <ImageView
                        android:id="@+id/weatherIndicatorImage"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_cloud_queue_dark"
                        app:weatherIcon="@{data}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/realFeelText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        app:convertDoubleToString="@{data.main.feels_like}"
                        tools:text="18" />

                    <TextView
                        android:id="@+id/realFeelLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:text="@string/real_feel_label"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/weatherDescriptionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        app:weatherDescriptionText="@{data}"
                        tools:text="Overcast" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="40dp"
                android:layout_marginTop="10dp"
                android:paddingRight="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/humidityLabel"
                    style="@style/WeatherLabelTextStyle"
                    android:layout_weight="1"

                    android:text="@string/humidity_label" />

                <TextView
                    android:id="@+id/humidityText"
                    style="@style/WeatherInfoTextStyle"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    app:convertDoubleToString="@{data.main.humidity}"
                    tools:text="65%" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="40dp"
                android:layout_marginTop="20dp"
                android:paddingRight="40dp"
                android:orientation="horizontal">
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/windSpeedLabel"
                    style="@style/WeatherLabelTextStyle"
                    android:layout_weight="1"

                    android:text="@string/wind_speed_label" />

                <TextView
                    android:id="@+id/windSpeedText"
                    style="@style/WeatherInfoTextStyle"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    app:convertDoubleToString="@{data.wind.speed}"
                    tools:text="5.69 km/h" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="40dp"
                android:layout_marginTop="20dp"
                android:paddingRight="40dp"
                android:orientation="horizontal">
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pressureLabel"
                    style="@style/WeatherLabelTextStyle"
                    android:layout_weight="1"

                    android:text="@string/pressure_label" />

                <TextView
                    android:id="@+id/pressureText"
                    style="@style/WeatherInfoTextStyle"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    app:convertDoubleToString="@{data.main.pressure}"
                    tools:text="1023 mb" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:src="@drawable/ic_undraw_season_change"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="40dp"
                android:layout_marginTop="20dp"
                android:paddingRight="40dp"
                android:orientation="horizontal">
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/windDirectionLabel"
                    style="@style/WeatherLabelTextStyle"
                    android:layout_weight="1"

                    android:text="@string/wind_direction_label" />

                <TextView
                    android:id="@+id/windDirectionText"
                    style="@style/WeatherInfoTextStyle"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    app:convertDoubleToString="@{data.wind.deg}"
                    tools:text="N" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/visibilityLabel"
                    style="@style/WeatherLabelTextStyle"
                    android:layout_weight="1"

                    android:text="@string/visibility_label" />

                <TextView
                    android:id="@+id/visibilityText"
                    style="@style/WeatherInfoTextStyle"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    app:convertDoubleToString="@{data.visibility}"
                    tools:text="0 km" />
            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>
